app/nexus3/nexus3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus3
  labels:
    cicd-app: nexus3
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8081
    name: http
  selector:
    cicd-app: nexus3
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nexus3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        cicd-app: nexus3
    spec:
      containers:
      - name: nexus3
        image: sonatype/nexus3
        imagePullPolicy: IfNotPresent
#        resources:
#          limits:
#            cpu: 400m
#            memory: 500Mi
#          requests:
#            cpu: 200m
#            memory: 200Mi
        ports:
        - name: http 
          containerPort: 8081
        volumeMounts:
        - name: persistent-datadir
          mountPath: /nexus-data
      volumes:
      - name: persistent-datadir
        hostPath:
          path: /data/nexus3
